@@ -1,6 +1,6 @@
 package com.backbase.stream.cursor.events;
 
-import com.backbase.dbs.arrangement.api.service.v2.model.AccountArrangementItem;
+import com.backbase.dbs.arrangement.api.service.v3.model.ArrangementItem;
 import com.backbase.stream.TransactionService;
 import com.backbase.stream.cursor.configuration.CursorServiceConfigurationProperties;
 import com.backbase.stream.cursor.model.IngestionCursor;
@@ -92,32 +92,24 @@ public class AbstractLoginEventListener {
         .subscribe();
   }
 
-  private Flux<IngestionCursor> createIngestionCursor(
-      User user,
-      LegalEntity legalEntity,
-      Object loginEvent,
-      AssignedPermission assignedPermission) {
-    List<IngestionCursor> ingestionCursors = new ArrayList<>();
-    ProductGroup.ProductGroupTypeEnum arrangements1 =
-        ProductGroup.ProductGroupTypeEnum.ARRANGEMENTS;
-    Object arrangements = assignedPermission.getPermittedObjects().get(arrangements1.name());
-    if (arrangements instanceof List
-        && (((List) arrangements).get(0) instanceof AccountArrangementItem)) {
-      List<AccountArrangementItem> products = (List<AccountArrangementItem>) arrangements;
+    private Flux<IngestionCursor> createIngestionCursor(User user, LegalEntity legalEntity, Object loginEvent, AssignedPermission assignedPermission) {
+        List<IngestionCursor> ingestionCursors = new ArrayList<>();
+        ProductGroup.ProductGroupTypeEnum arrangements1 = ProductGroup.ProductGroupTypeEnum.ARRANGEMENTS;
+        Object arrangements = assignedPermission.getPermittedObjects().get(arrangements1.name());
+        if (arrangements instanceof List && (((List<?>) arrangements).getFirst() instanceof ArrangementItem)) {
+            @SuppressWarnings("unchecked") List<ArrangementItem> products = (List<ArrangementItem>) arrangements;
 
-      for (AccountArrangementItem product : products) {
-
-        IngestionCursor ingestionCursor = createLoginIngestionCursor(loginEvent, user, legalEntity);
-
-        ingestionCursor.setArrangementId(product.getId());
-        ingestionCursor.setExternalArrangementId(product.getExternalArrangementId());
-        // Make this configurable?
-        ingestionCursor.setCursorState(IngestionCursor.CursorStateEnum.NOT_STARTED);
-        ingestionCursor.setCursorSource(IngestionCursor.CursorSourceEnum.LOGIN_EVENT);
-        ingestionCursor.getAdditionalProperties().put("product", product);
-        ingestionCursors.add(ingestionCursor);
-      }
-    }
+            for (ArrangementItem product : products) {
+                IngestionCursor ingestionCursor = createLoginIngestionCursor(loginEvent, user, legalEntity);
+                ingestionCursor.setArrangementId(product.getId());
+                ingestionCursor.setExternalArrangementId(product.getExternalArrangementId());
+                // Make this configurable?
+                ingestionCursor.setCursorState(IngestionCursor.CursorStateEnum.NOT_STARTED);
+                ingestionCursor.setCursorSource(IngestionCursor.CursorSourceEnum.LOGIN_EVENT);
+                ingestionCursor.getAdditionalProperties().put("product", product);
+                ingestionCursors.add(ingestionCursor);
+            }
+        }
 
     return Flux.fromIterable(ingestionCursors);
   }
